# mcp-obsidian-remote

./: README.md  pyproject.toml
src/mcp_obsidian/: obsidian.py  server.py
src/mcp_obsidian_remote/: __init__.py  __main__.py  obsidian.py  server.py  tools.py
