[project]
name = "mcp-obsidian-remote"
version = "0.2.3"
description = "MCP server to work with Obsidian remotely via REST plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"mcp>=1.1.0",
	"python-dotenv>=1.0.1",
	"requests>=2.32.3"
]

[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[[project.authors]]
name = "Alexei Smirnov"
email = "alexei@virtuman.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"pyright>=1.1.389",
]

[project.scripts]
mcp-obsidian-remote = "mcp_obsidian_remote:main"
